--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-# 버전 관리 시스템(VCS:Version Control System)
-===========================================
+<h1> # 버전 관리 시스템(VCS:Version Control System)
+     ===========================================
 # git 
 
 # 소스 관리는 어떻게?
