--- a/README
+++ b/README
@@ -1,6 +1,5 @@
-<h1> # 버전 관리 시스템(VCS:Version Control System)
-     ===========================================
-# git 
+# 버전 관리 시스템(VCS:Version Control System)
+## git 
 
 # 소스 관리는 어떻게?
  
