--- a/1. VCS.md
+++ b/1. VCS.md
@@ -1,4 +1,17 @@
 ### VCS(Version Control System)
  * SCM(Source Control System, Source Configuration Mangement)
  * (팀 단위) 프로젝트 개발할 때 소스코드, 문서 등 버전을 관리하는 시스템
- *
+ 
+
+### VCS 종류
+ * CVCS(Centralized Version Control System)
+   * 중앙집중식 / Client-Server 방식
+   * 서버에 소스파일과 버전 히스토리 저장
+   * 단점 : 서버가 고장 나면 협업이 어려움
+   * CVS(Concurrent Version System), SVN(SubVersion) 등
+  
+ * DVCS(Distributed Version Control System)
+   * 분산 관리 시스템
+   * 소스와 히스토리를 여러 PC에 분산 저장
+   * 서버 장애시 로컬 저장소를 이용하여 중앙 저장소 복원 가능
+   * Git, Mercurial, Bazaar 등
