--- a/1. VCS.md
+++ b/1. VCS.md
@@ -1,9 +1,9 @@
-### VCS(Version Control System)
+## VCS(Version Control System)
  * SCM(Source Control System, Source Configuration Mangement)
  * (팀 단위) 프로젝트 개발할 때 소스코드, 문서 등 버전을 관리하는 시스템
  
 
-### VCS 종류
+## VCS 종류
  * CVCS(Centralized Version Control System)
    * 중앙집중식 / Client-Server 방식
    * 서버에 소스파일과 버전 히스토리 저장
