--- a/2. Git.md
+++ b/2. Git.md
@@ -1,3 +1,8 @@
 ## Git
  * 2005년 리눅스 커널 개발자 - 리눅스 토르발스에 의해 개발
  * 분산 버전 관리 시스템 : 빠른 수행속도
+ * 지속적인 버전 관리가 필요한 경우 사용(SW, Design, ...)
+ * 수천 개의 브랜치(branch) 작업 동시 수행
+ * 대형 프로젝트의 버전 관리가 가능함.
+ * 중앙 서버와 독립적으로 Local에서 완벽하게 소스와 이력 관리
+ * Local에서 버전 관리할 때 사용
