--- a/2. Git.md
+++ b/2. Git.md
@@ -9,4 +9,15 @@
  
 #### [참고] https://github.com/collections
 
- 
+## Git vs Github
+ * Git
+   * 분산 버전 관리 시스템 소프트웨어
+   * 로컬저장소(Local Repository) 사용
+   * Local 내에서 git을 이용하여 버전 관리
+  
+  * GitHub
+    * 원격저장소(Remote Repository) 제공
+    * Local에서 관리하는 소스코드를 업로드 후 공유
+    * 다른 개발자와 협업할 때 사용
+    * https://github.com
+    
