--- a/2. Git.md
+++ b/2. Git.md
@@ -20,3 +20,9 @@
     * 다른 개발자와 협업할 때 사용
     * https://github.com
     
+## Git 설치
+
+
+
+
+[참고] 누구나 쉽게 이해할 수 있는 Git 입문 (https://backlog.com/git-tutorial/kr/)
