--- a/2. Git.md
+++ b/2. Git.md
@@ -25,4 +25,4 @@
 
 
 
-참고 [누구나 쉽게 이해할 수 있는 Git 입문](https://backlog.com/git-tutorial/kr/)
+참고 - [누구나 쉽게 이해할 수 있는 Git 입문](https://backlog.com/git-tutorial/kr/)
