--- a/2. Git.md
+++ b/2. Git.md
@@ -22,7 +22,10 @@
     
 ## Git 설치
  * https://git-scm.com/downloads
-
+ * 리눅스
+ '''
+ # apt-get install git
+ '''
 
 
 참고 - [누구나 쉽게 이해할 수 있는 Git 입문](https://backlog.com/git-tutorial/kr/)
