--- a/2. Git.md
+++ b/2. Git.md
@@ -23,8 +23,8 @@
 ## Git 설치
  * https://git-scm.com/downloads
  * 리눅스
- ```c
-     apt-get install git
+ ```linux
+     # apt-get install git
  ```
 
 
