--- a/2. Git.md
+++ b/2. Git.md
@@ -22,7 +22,7 @@
     
 ## Git 설치
  * https://git-scm.com/downloads
- * Debian/Ubuntu 
+ * Debian/Ubuntu or Raspberry pi
  ```linux
      # apt-get install git
  ```
