--- a/2. Git.md
+++ b/2. Git.md
@@ -28,6 +28,4 @@
  ```
 
 
-참고 - [누구나 쉽게 이해할 수 있는 Git 입문](https://backlog.com/git-tutorial/kr/)
-
-참고 - [Pro Git](http://git-scm.com/book/ko/v2)
+참고 - [누구나 쉽게 이해할 수 있는 Git 입문](https://backlog.com/git-tutorial/kr/) / [Pro Git](http://git-scm.com/book/ko/v2)
