--- a/2. Git.md
+++ b/2. Git.md
@@ -23,9 +23,9 @@
 ## Git 설치
  * https://git-scm.com/downloads
  * Debian/Ubuntu/Raspberry pi
- ```linux
+   * ```linux
      # apt-get install git
- ```
+     ```
 
 
 참고 - [누구나 쉽게 이해할 수 있는 Git 입문](https://backlog.com/git-tutorial/kr/) / [Pro Git](http://git-scm.com/book/ko/v2)
