--- a/2. Git.md
+++ b/2. Git.md
@@ -26,6 +26,12 @@
    * ```linux
      # apt-get install git
      ```
-
+ * 사용자 이름, 이메일 설정
+   * ```linux
+     # git config --global user.name "사용자 이름"
+     # git config --global user.email "이메일"
+     # git config --global color.ui auto
+     # git config --glocal --list
+     ```
 
 참고 - [누구나 쉽게 이해할 수 있는 Git 입문](https://backlog.com/git-tutorial/kr/) / [Pro Git](http://git-scm.com/book/ko/v2)
