--- a/2. Git.md
+++ b/2. Git.md
@@ -31,7 +31,7 @@
      # git config --global user.name "사용자 이름"
      # git config --global user.email "이메일"
      # git config --global color.ui auto
-     # git config --glocal --list
+     # git config --global --list
      ```
 
 참고 - [누구나 쉽게 이해할 수 있는 Git 입문](https://backlog.com/git-tutorial/kr/) / [Pro Git](http://git-scm.com/book/ko/v2)
