--- a/3. Repo.md
+++ b/3. Repo.md
@@ -7,6 +7,6 @@
     ```
   * 원격 저장소 복제
     ```linux
-    git clone 
+    git clone https://github.com/AceLewis/my_first_calculator.py.git
     ```
  
