--- a/2. Git.md
+++ b/2. Git.md
@@ -23,11 +23,11 @@
 ## Git 설치
  * https://git-scm.com/downloads
  * Debian/Ubuntu/Raspberry pi
-   * ```linux
+     ```linux
      # apt-get install git
      ```
  * 사용자 이름, 이메일 설정
-   * ```linux
+     ```linux
      # git config --global user.name "사용자 이름"
      # git config --global user.email "이메일"
      # git config --global color.ui auto
