--- a/3. Repo.md
+++ b/3. Repo.md
@@ -10,3 +10,5 @@
     git clone https://github.com/AceLewis/my_first_calculator.py.git
     ```
  
+## Add / Commit
+![image](https://user-images.githubusercontent.com/47412229/170808353-977295a0-db5e-4517-b40c-3cfafe217b1a.png)
