--- a/3. Repo.md
+++ b/3. Repo.md
@@ -12,4 +12,5 @@
  
 ## Add / Commit
 
-![image](https://user-images.githubusercontent.com/47412229/170808382-4947395b-a547-4c09-91c6-8251aaaf7bca.png)
+Untracked files | Trackedfiles
+---|---|
