--- a/3. Repo.md
+++ b/3. Repo.md
@@ -14,7 +14,6 @@
   * Untracked File : 저장소에서 처음 파일을 만들면 Untracked File
   * Tracked File : 파일생성 후 추가, 수정, 삭제 등 Add 명령을 이용하여 Staging Area에 추가한 파일이나 Commit 명령어로 Git 저장소에 한번이라도 저장된 파일
 
-
-Untracked files | Trackedfiles
----|---|---|
+|Untracked files | Trackedfiles|
+|---|---|
 
