--- a/3. Repo.md
+++ b/3. Repo.md
@@ -14,6 +14,5 @@
   * Untracked File : 저장소에서 처음 파일을 만들면 Untracked File
   * Tracked File : 파일생성 후 추가, 수정, 삭제 등 Add 명령을 이용하여 Staging Area에 추가한 파일이나 Commit 명령어로 Git 저장소에 한번이라도 저장된 파일
 
-|Untracked files | Trackedfiles|
-|---|---|---|
-|Working Directory|Staging Area|Git Repo.| 
+![image](https://user-images.githubusercontent.com/47412229/170808992-f6009382-01ca-453c-87c5-2fd31c9f033e.png)
+
