--- a/4. command-1.md
+++ b/4. command-1.md
@@ -1,4 +1,10 @@
 ### git 상태 확인
    ```linux
-      #git status
+      # git status
    ```
+
+### staging area 저장
+   ```linux
+      # git add 파일명
+   ```
+
