--- a/4. command-1.md
+++ b/4. command-1.md
@@ -17,7 +17,7 @@
    # git log
    ```
    
-### taging Area에 있는 파일을 등록을 취소
+### Staging Area에 있는 파일을 등록을 취소
    ```linux
    # git rm --cached 파일명
    ```
