--- a/4. command-1.md
+++ b/4. command-1.md
@@ -15,6 +15,11 @@
 ### log 확인
    ```linux
    # git log
+   # git log -3
+   # git log -p -1 //이전 버전과 차이를 함께 보여줌
+   # git log -2 --oneline 
+   # git log --author=kig2929kig 
+   # git log --pretty=oneline -graph
    ```
    
 ### Staging Area에 있는 파일을 등록을 취소
