--- a/4. Git command-1.md
+++ b/4. Git command-1.md
@@ -10,11 +10,18 @@
 ### local Repo 저장
    ```linux
    # git commit -m "주석"
+   or
+   # git commit -am "주석"
    ```
 
 ### log 확인
    ```linux
    # git log
+   # git log -3
+   # git log -p -1 //이전 버전과 차이점을 보여줌
+   # git log -2 --oneline
+   # git log --author=kig2929kig
+   # git log --pretty=oneline --graph
    ```
    
 ### Staging Area에 있는 파일을 등록을 취소
