Update 4. Git command-1.md

--- a/4. Git command-1.md
+++ b/4. Git command-1.md
@@ -11,7 +11,7 @@
    ```linux
    # git commit -m "주석"
    or
-   # git commit -am "주석"
+   # git commit -am "주석" //한번이라도 add 명령어를 통해 Staging Area에 있었다면(Tracked File) 가능 
    ```
 
 ### log 확인
