Update 5. Git command-2.md

--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -1,1 +1,7 @@
-## 
+## git diff
+  * 커밋들을 비교하거나 commit과 working Directory 변경사항 표시
+  * 워킹 디렉터리와 Staging area 비교
+     ```linux
+     # git diff
+     ```
+     
