Update 5. Git command-2.md

--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -4,4 +4,7 @@
      ```linux
      # git diff
      ```
-     
+  * Commit 내용과 Staging area 비교
+     ```linux
+     # git diff --cached (or staged)
+     ```
