Update 5. Git command-2.md

--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -8,3 +8,7 @@
      ```linux
      # git diff --cached (or staged)
      ```
+  * Commit과 다른 Commit 비교
+     ```linux
+     # git diff commit1_checksum commit1_checksum
+     ```
