--- a/3. Repo.md
+++ b/3. Repo.md
@@ -5,6 +5,7 @@
     cd hello
     git init
     ```
+  * .git 폴더가 생성됨 -> 삭제하면 저장소도가 아니게 됨.
   * 원격 저장소 복제
     ```linux
     git clone https://github.com/AceLewis/my_first_calculator.py.git
