Update 5. Git command-2.md

--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -9,6 +9,7 @@
      # git diff --cached (or staged)
      ```
   * Commit과 다른 Commit 비교
+     ```linux
      # git log --oneline -2
      # git diff commit1_checksum commit2_checksum
      ```
