--- a/3. Repo.md
+++ b/3. Repo.md
@@ -1,5 +1,5 @@
 ## Repo 생성
-  * 로컬 저장소 생성 - .git 폴더가 생성됨 -> 삭제하면 저장소도 아니게 됨.
+  * 로컬 저장소 생성 : .git 폴더가 생성됨 -> 삭제하면 저장소도 아니게 됨.
     ```linux
     mkdir hello
     cd hello
