Update 5. Git command-2.md

--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -13,3 +13,11 @@
      # git log --oneline -2
      # git diff commit1_checksum commit2_checksum
      ```
+ 
+ ## Revert vs Reset
+   * 마지막 Commit 메시지 수정
+     ```linux
+     # git commit --amend
+     ```
+   * Modified 상태를 unmodified로 변경(WD)
+   * 
