Update 5. Git command-2.md

--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -20,4 +20,6 @@
      # git commit --amend
      ```
    * Modified 상태를 unmodified로 변경(WD)
-   * 
+     ```linux
+     # git checkout 파일이름
+     ```
