--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -23,5 +23,16 @@
      ```linux
      # git checkout 파일이름
      ```
-## Revert
-  * a
+   * Revert
+     * 원격 Repo 저장소에 push한 기록은 reset 할 수 없음. revert는 가능 
+     * 수정하고 싶은 commit 메시지를 이력을 수정할 수 있으면 해당 부분만 수정됨.
+     * reset은 수정하고 싶은 commit 메시지 이력을 수정하면 이후 메시지 이력은 모두 삭제 됨.
+   * Reset
+     * push 하지 않은 로컬 저장소에서는 사용 가능, push한 로컬 저장소에서 사용한다면 Reset한 이력 이후 내용은 모두 사라짐. 
+   
+  ## Reset : commit 취소
+    * 특정 커밋으로 되돌아갈 수 있으며 특정 커밋 이후의 버전들은 히스토리에서 삭제
+    ```linux
+    # git reset [option] [commit id]
+    ```
+    
