Update 5. Git command-2.md

--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -36,3 +36,9 @@
      # git reset [option] [commit id]
      ```
    * HEAD(현 브랜치 마지막 커밋)  
+   * Reset --soft
+     * HEAD이동, 해당 파일 staged, WD 파일 보존, Commit하면 원래 상태로 복원 가능
+     ```linux
+     # git reset --soft HEAD~
+     ```
+     
