--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -41,4 +41,9 @@
      ```linux
      # git reset --soft HEAD~
      ```
-     
+   * Reset --mixed
+     * default, HEAD 이동, 해당파일 unstaged, WD 파일 보존
+     ```linux
+     # git reset HEAD~
+     # git reset --mixed HEAD~
+     ```
