--- a/5. Git command-2.md
+++ b/5. Git command-2.md
@@ -47,3 +47,9 @@
      # git reset HEAD~
      # git reset --mixed HEAD~
      ```
+     
+   * Reset --hard
+     * HEAD이동, 해당 파일 unstaged, WD 파일 변경 사항 삭제 
+     ```linux
+     # git reset --hard HEAD~
+     ```
