Update 6. Git command-3.md

--- a/6. Git command-3.md
+++ b/6. Git command-3.md
@@ -12,3 +12,10 @@
     ```linux
     # git rm --cached 파일명
     ```
+## Git Clone
+  * 원격 저장소에서 로컬 저장소로 복제
+  ```linux
+  # git clone "remote repository URL"
+  # git clone "remote repository URL" "new folder"
+  # git clone -b "branch name" "remote repository URL"
+  ```
