Update 6. Git command-3.md

--- a/6. Git command-3.md
+++ b/6. Git command-3.md
@@ -19,3 +19,4 @@
   # git clone "remote repository URL" "new folder"
   # git clone -b "branch name" "remote repository URL"
   ```
+  * branch : 하나의 작업을 여러 사람이 독립적으로 어떤 작업을 진행하기 위한 개념. 필요에 의해 만들어지는 각각의 브랜치는 다른 브랜치의 영향을 받지 않기 때문에, 여러 작업을 동시에 진행할 수 있다.
