--- a/6. Git command-3.md
+++ b/6. Git command-3.md
@@ -20,3 +20,16 @@
   # git clone -b "branch name" "remote repository URL"
   ```
   * branch : 하나의 작업을 여러 사람이 독립적으로 어떤 작업을 진행하기 위한 개념. 필요에 의해 만들어지는 각각의 브랜치는 다른 브랜치의 영향을 받지 않기 때문에, 여러 작업을 동시에 진행할 수 있다.
+
+
+## .gitignore
+  * git 저장소에서 관리할 필요가 없는 파일이나 폴더 지정
+    * 컴파일된 파일
+    * 실행시간에 생성된 파일
+    * Hidden file
+    * 개인적인 파일
+    * 실행파일 디렉터리(/bin, /out)
+  * .gitignore 파일 생성
+    * https://www.gitignore.io
+  
+  
