Update 6. Git command-3.md

--- a/6. Git command-3.md
+++ b/6. Git command-3.md
@@ -32,4 +32,13 @@
   * .gitignore 파일 생성
     * https://www.gitignore.io
   
-  
+## Remote Repo
+  * Managing remote Repo
+    '''linux
+    # git remote
+    # git remote -v
+    # git remote -h
+    # git remote add origin "repo's URL"
+    # git remote remove origin
+    # git remote add calculator "repo's URL"
+    ```
