Update 6. Git command-3.md

--- a/6. Git command-3.md
+++ b/6. Git command-3.md
@@ -34,7 +34,7 @@
   
 ## Remote Repo
   * Managing remote Repo
-    '''linux
+    ```linux
     # git remote
     # git remote -v
     # git remote -h
